<resources>
    <string name="app_name">Trolley</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">profile</string>
    <string name="cart">Cart</string>
    <string name="signup">SignUp</string>
    <string name="signin">SignIn</string>
    <string name="phone_number">Phone Number</string>
    <string name="login_screen_image">Login screen Image</string>
    <string name="user_name">User Name</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
</resources>